syntax = "proto2";
option java_package = "io.wolverine.proto";     //转换后的java源文件包名
option java_outer_classname = "WolverineProto"; //转换后的java源文件文件名、类名
enum DataType //枚举消息类型
    {
        JSON = 0; //proto3版本中，首成员必须为0，成员不应有相同的值
        PROTOBUF = 1;
        
    }
enum CommandType //枚举消息类型
    {
        CREATE_TASK = 0; //proto3版本中，首成员必须为0，成员不应有相同的值
        HEART_BEAT  = 1;
        PAUSE_TASK  = 2;
        RESTART_TASK= 3;
    }   
message WolverineTaskMsg{
	required string taskId=1;
	required string jobId=2;
	required CommandType commandType=3;
	required DataType dataType=4;
	optional bytes data=5;
}
